Prevents marker-node's title-section from overflowing
* Prior to this, the marker node's title-section was overflowing into the the border for the waveform. This was very noticeable in dark mode

--- a/jvm/controls/src/main/resources/css/marker-node.css
+++ b/jvm/controls/src/main/resources/css/marker-node.css
@@ -23,7 +23,7 @@
 }
 
 .marker-node .title-section {
-    -fx-pref-height: 80;
+    -fx-pref-height: 78;
     -fx-alignment: center-left;
     -fx-spacing: 10;
     -fx-padding: 0 2 0 16;
